--- a/src/triage/component/postmodeling/postmodeling_config.yaml
+++ b/src/triage/component/postmodeling/postmodeling_config.yaml
@@ -1,10 +1,10 @@
 error_analysis:
   # Size of the list.
-  k: [100, 200, 300]
+  k: [100]
   
   # Parameter grid to try on the DecisionTreeClassifier trained for the error analysis.
   model_params:
-    max_depth: [1, 3, 5, 10, ~]
+    max_depth: [5]
 
   # Flag to define if plots are going to be displayed (True) or saved (False)
   view_plots: False
