--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,8 +2,10 @@ name: Python package
 
 on:
   push:
-    tags:
-      - '*'
+    #tags:
+    #  - '*'
+    branches:
+      - master
 
 jobs:
   build:
