--- a/src/triage/experiments/model_grid_presets.yaml
+++ b/src/triage/experiments/model_grid_presets.yaml
@@ -98,3 +98,18 @@ texas:
         'sklearn.svm.SVC':
             C: [0.00001,0.0001,0.001,0.01,0.1,1,10]
             kernel: ['linear']
+
+        'xgboost.sklearn.XGBClassifier':
+            n_estimators: [1000, 5000, 10000]
+            learning_rate: [0.02, 0.05, 0.1, .2]
+            max_depth: [5, 10, 20, 50, 100]
+
+whatever:
+    grid:
+
+        'sklearn.naive_bayes.GaussianNB':
+            var_smoothing: [1.0e-09]
+
+        'sklearn.svm.SVC':
+            C: [0.00001,0.0001,0.001,0.01,0.1,1,10]
+            kernel: ['linear']
