prev conf on whatever grid preset

--- a/src/triage/experiments/model_grid_presets.yaml
+++ b/src/triage/experiments/model_grid_presets.yaml
@@ -105,6 +105,7 @@ texas:
             max_depth: [5, 10, 20, 50, 100]
 
 whatever:
+    prev: ~
     grid:
 
         'sklearn.naive_bayes.GaussianNB':
