mandatory argument probability for predict proba on SVC

--- a/src/triage/experiments/model_grid_presets.yaml
+++ b/src/triage/experiments/model_grid_presets.yaml
@@ -114,3 +114,4 @@ whatever:
         'sklearn.svm.SVC':
             C: [0.00001,0.0001,0.001,0.01,0.1,1,10]
             kernel: ['linear']
+            probability: ['True']
